fixed bootstrap and align stuff, with bbackground.

--- a/src/assets/styles/Navbar.css
+++ b/src/assets/styles/Navbar.css
@@ -1,7 +1,5 @@
 .my-nav {
     background-color: #FFFFFF;
-    font-size: 32px;
-    padding: 15px 25px;
     border-bottom: 2px solid black;
     font-family: "Source Code Pro Light", sans-serif;
 
@@ -11,14 +9,21 @@
     box-shadow: 0 8px 10px -6px #999;
 }
 
+.navbar-brand {
+    font-size: 32px !important;
+    padding: 10px 25px 5px; 
+}
+
 
 
 @media (max-width: 990px) {
 
     .my-nav {
-        font-size: 20px;
-        padding: 20px 15px;
         border-bottom: 1px solid black;
     }
 
+    .navbar-brand {
+        font-size: 20px !important;
+        padding: 5px 10px 0px; 
+    }
 }
